@@ -34,64 +34,6 @@ It is written using the L<Catalyst> framework.
 
 =head1 METHODS
 
-=head2 index
-
-Display the home page.
-
-=cut
-
-sub index : Private {
-    my ($self, $c) = @_;
-
-    $c->stash->{template} = 'index.tt';
-}
-
-=head2 default
-
-Handle any actions which did not match, i.e. 404 errors.
-
-=cut
-
-sub default : Private {
-    my ($self, $c, $path) = @_;
-
-    $c->res->status(404);
-    $c->stash->{template} = '404.tt';
-}
-
-=head2 end
-
-Forward to the view.
-
-=cut
-
-sub end : Private {
-    my ($self, $c) = @_;
-
-    return 1 if $c->res->status =~ /^3\d\d$/;
-    return 1 if $c->res->body;
-
-    if (@{ $c->error }) {
-        $c->res->status(500);
-
-        # Override the ugly Catalyst debug screen
-        unless ($c->debug) {
-            $c->log->error($_) for @{ $c->error };
-
-            $c->stash->{errors} = $c->error;
-            $c->error(0);
-
-            $c->stash->{template} = 'error.tt';
-        }
-    }
-
-    $c->forward($c->view('TT'));
-}
-
-##
-## Application methods
-##
-
 =head2 uri_for
 
 Overload C<uri_for> to handle query parameters and to accept objects
