@@ -2,6 +2,9 @@ This file documents the revision history for UFL::Phonebook.
 
 0.20
         - Rename from Phonebook to UFL::Phonebook
+        - Switch to Catalyst::Plugin::ConfigLoader
+        - Move actions from application to Controller::Root
+        - Convert /end to Catalyst::Action::RenderView
 
 0.19  Tue Nov 28 16:00:51 EST 2006
         - Cleanup {encode,decode}_ufid
